--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,28 @@
 .App {
   text-align: center;
+  font-family: 'American Typewriter', serif,
+  monospace;
 }
 
-.topnav {
-  background-color: #333;
+#sticky-footer{
+  position:fixed;
+  padding: 10px 10px 10px 10px;
+  bottom:0;
+  width:100%;
+}
+
+.simple-keyboard {
+  max-width: 850px;
+  margin:auto;
+  justify-content: center;
+}
+
+.navbar {
   overflow: hidden;
+  background-color: #333;
 }
 
-.topnav a {
+.navbar a {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -18,28 +33,49 @@
   monospace;
 }
 
-.topnav a:hover {
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #ddd;
   color: rgb(151, 146, 146);
 }
 
-#sticky-footer{
-  position:fixed;
-  padding: 10px 10px 10px 10px;
-  bottom:0;
-  width:100%;
-}
-input {
-  width: 100%;
-  height: 100px;
-  padding: 20px;
-  font-size: 20px;
-  border: none;
-  box-sizing: border-box;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.simple-keyboard {
-  max-width: 850px;
-  margin:auto;
-  justify-content: center;
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
