--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,3 +79,22 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
+  width: 300px;
+  height: 50px;
+}
+
+.font {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.rules_page {
+  display: absolute;
+  justify-content: center;
+  margin-top: 100px;
+
+}
