--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,7 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a {
@@ -29,7 +30,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  font-family: 'American Typewriter', serif,
+  font-family: Arial, Helvetica, sans-serif,
   monospace;
 }
 
@@ -85,9 +86,7 @@
 
 .simple-keyboard.myTheme1 {
   background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 0;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-radius: 5px;
 }
 
 .simple-keyboard.myTheme1 .hg-button {
@@ -128,4 +127,25 @@ input {
 }
 .show {
   display: block;
+}
+.stats {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 50px 0;
+  font-size: large;
+}
+.container {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flexbox;
+}
+.bg-custom-button {
+  background-color: #f5f5f5;
+  border-color: black;
+  border: 3px solid-transparent;
+  color: black;
+  border-radius: 5px;
+  width: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+::placeholder {
+  font-family: Arial, Helvetica, sans-serif;
 }
